Closed Bug 168051 Opened 22 years ago Closed 21 years ago

with customize toolbar in toolbar, crash occurs when previous page's contextual menu is still active [@ objc_msgSend]

Categories

(Camino Graveyard :: Toolbars & Menus, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: chrispetersen, Assigned: bryner)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files, 1 obsolete file)

Build: 2002-09-11-05
Platform: OS X 10.2
Expected Results: Contextual menu should remain open
What I got: With contextual menu still opened, the application crashs when page
finishs loading

Steps to reproduce:

1) Got to http://chimera.mozdev.org/installation.html

2) Click on bugs link

3) Control-click on same link (before page loads) to get the contextual menu for
that link

4) Hover over menu item. The key is to leave contextual opened

5) After page completely loads, I get a crash
Attached file Stack trace (obsolete) —
Attached file stack trace
Attachment #98771 - Attachment is obsolete: true
Summary: Crash occurs when page's previous contextual is still active → Crash occurs when previous page's contextual menu is still active
For some reason , I can't reproduce on two other Macs (G4 -450 , G4 - 933).
However, the problem is very reproducable on my Dual 800 G4 running 10.2 (6C115).
i filed a bug re: context menu persistence, bug 168065.
WorksForMe using Chimera/2002090913 on 10.1.5.
Severity: major → critical
Keywords: crash
Summary: Crash occurs when previous page's contextual menu is still active → Crash occurs when previous page's contextual menu is still active [@ objc_msgSend]
OK, I can crash this now on every machine I tried. You need to move the
customize icon to your toolbar. Then proceed with the steps I provided.I don't
think it crashs because the previous menu is displayed. If you control -click
the page (while it's still loading) and displayed a contextual menu, the
application will crash after the page has finished loading.
updating summary: after adding "customize toolbar" (whether text or icon or
both) to the toolbar and following chris' steps, i can crash this. moreover, i
need to control-click to bring up the context menu --i don't seem to crash when
i use my right-mouse button (scrollmouse+2 buttons) to bring up the context menu.
Summary: Crash occurs when previous page's contextual menu is still active [@ objc_msgSend] → with customize toolbar in toolbar, crash occurs when previous page's contextual menu is still active [@ objc_msgSend]
*** Bug 175458 has been marked as a duplicate of this bug. ***
unable to repro on 10.1.5 using 2002.10.31.04... but strangle able to repro on
10.2.1.

chris, are you able to repro this on 10.1.5?
Yes, I still see this problem under 10.1.5 using the 2002-10-31-04 build. I can
only reproduce if the customize icon is moved on toolbar.
Blocks: 147975
In constrast to comment 7, I am able to reproduce this crash using the right
mouse button (Logitech Mouseman Optical)
-->pinkerton
Assignee: brade → pinkerton
taking.
Assignee: pinkerton → bryner
As the documentation says, you don't really need to call validateVisibleItems
for anything.  It's done automatically as part of [NSWindow update] handling. 
If you call it manually while a context menu is visible, bad things happen
(perhaps only for Cocoa standard toolbar items).

I tested this patch to make sure back/forward/stop enabled and disabled at the
right times.  I also checked that the throbber animation started and stopped
correctly.
Attachment #126695 - Flags: review?(pinkerton)
Comment on attachment 126695 [details] [diff] [review]
remove call to [NSToolbar validateVisibleItems]

looks good if you tested it. r=pink
Attachment #126695 - Flags: review?(pinkerton) → review+
checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Crash Signature: [@ objc_msgSend]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: