Fix crash when a new page loads while the previous page's context menu is active, and Customize is in the toolbar (bug 168051).  r=pinkerton.